# Voxel-Tool

./: .gitignore  CURRENT_STATE.md  DAILY_REPORT.md  MANUAL_CHECKLIST_TASK_01_VIEWPORT_VISIBILITY.md  PROJECT_SPEC.md  README.md  ROADMAP_TASKS.md  pyproject.toml  pytest.ini  run.ps1
Doc/: BUG_ANALYSIS.md  COMPETITIVE_ANALYSIS.md  CURRENT_STATE.md  DAILY_REPORT.md  FEATURE_ANALYSIS.md  INDEX.md  NEXT_WORKDAY.md  OPERATIONS.md  PACKAGING_CHECKLIST.md  PARITY_RECHECK_PROMPT.md  PARITY_SCORECARD.md  PHASE1_COMPLETION_DEFINITION.md  PROJECT_SPEC.md  QUBICLE_COMPARISON.md  QUBICLE_COMPETITIVE_NOTES.md  QUBICLE_FEATURE_CATALOG.md  QUBICLE_GAP_ANALYSIS.md  ROADMAP_TASKS.md  TEAM_LEAD_REPORT.md
src/app/: __init__.py  app_context.py  main.py  settings.py
src/core/: __init__.py  models.py  palette.py  part.py  project.py  scene.py
src/util/: fs.py  (+1 more)
tests/: conftest.py  perf_baseline.json  test_command_stack.py  test_export_options_dialog.py  test_gltf_exporter.py  test_greedy_mesher.py  test_mesh_normals.py  test_mirror_modes.py  test_obj_exporter.py  test_packaging_script.py  test_palette_defaults.py  test_palette_io.py  test_perf_baseline.py  test_project_io.py  test_qb_exporter.py  test_qb_io.py  test_raycast.py  test_recovery_io.py  test_scene_parts.py  test_shortcuts.py  test_solidify_incremental.py  test_source_tree_guard.py  test_stats.py  test_stats_panel.py  test_surface_extractor.py  test_view_preset_mapping.py  test_vox_exporter.py  test_vox_io.py  test_voxel_grid.py
tools/: build_pyinstaller.spec  package_windows.ps1
voxel_tool/: README.md  requirements.txt
(+47 files in other folders)
